# bacore

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
docs/: index.md
python/bacore/cli/: main.py
python/bacore/domain/: files.py  settings.py  source_code.py  testdata.py
python/bacore/interactors/: retrieve.py  source_code_reader.py
python/bacore/interfaces/: cli_typer.py  power_point.py  web_fasthtml.py
python/bacore/web/: main.py
src/bacore/cli/: create.py  main.py  serve.py  test.py
src/bacore/domain/: config.py  error_handling.py  errors.py  files.py  settings.py
src/bacore/interactors/: delete.py  install.py  retrieve.py
src/bacore/interfaces/: cli_typer.py
tests/: conftest.py
tests/domain/: test_config.py  test_info.py  test_source_code.py
tests/interactors/: test_delete.py  test_source_code_reader.py
tests/interfaces/: test_web_fasthtml.py
tests/web/: test_main.py
