[package]
name = "bacore"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_bacore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["abi3-py311", "extension-module", "generate-import-lib"] }
