[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = 'bacore'
description = "BACore is a framework for business analysis and test automation."
readme = "README.md"
authors = [
    { name = "Kristian Grönberg", email = "kristian@gronberg.org" },
    { name = "Jacob Dahlberg", email = "dahlberg.jacob@gmail.com"},
    { name = "Jonatan Söderström", email = "jonatan.m.soderstrom@gmail.com"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 1 - Planning",
    "Framework :: MkDocs",
    "Framework :: Pydantic :: 2",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Natural Language :: English" ]
dynamic = ["version"]
keywords = ["business analysis", "test automation", "testing" ]
requires-python = ">=3.10.0"
dependencies = [
    "Faker>=25.8.0",
    "faker_marketdata>=0.4",
    "hypothesis>=6.103.1",
    "keyring>=24.3.0",
    "lxml>=4.9.4",
    "markdown-exec[ansi]>=1.7.0",
    "mkdocs>=1.5.3",
    "mkdocs-caption>=0.0.10",
    "mkdocs-material>=9.4.14",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-git-show-history-log-plugin>=0.2",
    "neoteroi-mkdocs>=1.0.4",
    "playwright>=1.40.0",
    "polars>=1.4.1",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "pydantic-xml>=2.7.0",
    "pytest>=7.4.3",
    "pytest-playwright>=0.4.3",
    "pytest-testmon>=2.1.0",
    "pytest-watch>=4.2.0",
    "typer>=0.12.5" ]

[project.optional-dependencies]

api = [
    "fastapi[all]>=0.68.1",
    "uvicorn>=0.29.0" ]

dev = [
    "bpython>=0.24",
    "pdbpp>=0.10.3",
    "python-language-server[all]>=0.36.2",
    "ruff>=0.5.2" ]

[project.scripts]
bacore = "bacore.cli.main:app"

[tool.maturin]
python-source = "python"
module-name = "bacore._bacore"
features = ["pyo3/extension-module"]
compatibility = "linux"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "--import-mode=importlib" ]

markers = [
    "deve: Tests for setting up local development environment",
    "domain: Tests for domain",
    "interactors: Tests for interactors",
    "interfaces: Tests for interfaces" ]

[tool.ruff]
line-length = 120
